<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">purrsonalcatapp</string>
    <string name="login">Login</string>
    <string name="message_login_page">Access Your Cat\'s Health Information</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="title_register_page">Register</string>
    <string name="search_main" tools:ignore="ExtraTranslation">Search</string>
    <string name="todo">imageregister</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,abitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="gejala">Gejala Kucing Anda</string>
    <string name="diagnosis">symptom</string>
    <string name="disease">Disease</string>
    <string name="judul">Judul</string>
    <string name="detail">Detail article</string>
    <string name="message_register">Register for Cat Disease Detection Services</string>
    <string-array name="data_judul">
        <item>Abses Pada Kucing: Penyebab dan Cara Mengobatinya</item>
        <item>Bahaya dan Resiko Kelebihan Berat Badan Pada Kucing</item>
        <item>Kucing Muntah Makanan? Berikut Penjelasannya!</item>
        <item>Bulu Kucing Rontok? Berikut Cara Mengatasinya!</item>
        <item>Penyakit Scabies pada Kucing</item>
        <item>Apa itu Chylamidia pada kucing?</item>
        <item>Kucing Cacingan? Bagaimana Cara Mengatasinya?</item>
        <item>Pertolongan Pertama Kucing Sesak Nafas</item>
        <item>Cara Menghilangkan Kutu Pada Kucing</item>
        <item>Kenapa Kucing Menjulurkan Lidah? Simak Penjelasan Berikut!</item>
        <item>Pyometra Pada Kucing: Penyebab, Gejala, dan Cara Menanganinya</item>
        <item>Seputar Kucing Susah Buang Air Kecil</item>
        <item>Mata Kucing Berselaput: Penyebab dan Cara Menyembuhkannya</item>
        <item>Ketahui Syarat dan Efek Samping Vaksin Kucing</item>
        <item>Penyebab giardiasis pada kucing</item>
    </string-array>
</resources>